mapeando e ajustando o cadastro de pessoas

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,4 +1,13 @@
 <div class="container">
-    <h1>Bem vindo ao Evenement Master</h1>
-    <button class="create-event-button">Criar Evento</button>
+    <div class="row justify-content-center align-items-center vh-100">
+        <div class="col-6">
+            <div class="text-center">
+                <img src="/frontend/src/img/event-master.png" alt="Logo" class="mb-4">
+                <h1 class="display-4 mb-3">Bem vindo ao Evenement Master</h1>
+                <p class="lead mb-5">Crie e gerencie seus eventos de maneira fácil e eficiente.</p>
+                <a href="#" class="btn btn-primary btn-lg">Criar Evento</a>
+                <a href="/cadastrar" class="btn btn-secondary btn-lg mt-3">Cadastrar</a>
+            </div>
+        </div>
+    </div>
 </div>
