--- a/frontend/src/app/cadastro/cadastro.component.html
+++ b/frontend/src/app/cadastro/cadastro.component.html
@@ -11,15 +11,15 @@
         </div>
         <div class="mb-3">
             <label for="cpf" class="form-label">CPF</label>
-            <input type="text" class="form-control" id="email" placeholder="Digite seu email">
+            <input type="text" class="form-control" id="email" placeholder="Digite seu CPF">
         </div>
         <div class="mb-3">
             <label for="telefone" class="form-label">Telefone</label>
-            <input type="tel" class="form-control" id="email" placeholder="Digite seu email">
+            <input type="tel" class="form-control" id="email" placeholder="Digite seu telefone">
         </div>
         <div class="mb-3">
             <label for="senha" class="form-label">Senha</label>
-            <input type="password" class="form-control" id="email" placeholder="Digite seu email">
+            <input type="password" class="form-control" id="email" placeholder="Digite sua senha">
         </div>
         <button type="submit" class="btn btn-primary">Cadastrar</button>
     </form>
