--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,13 +1,27 @@
-<div class="container">
-    <div class="row justify-content-center align-items-center vh-100">
-        <div class="col-6">
-            <div class="text-center">
-                <img src="/frontend/src/img/event-master.png" alt="Logo" class="mb-4">
-                <h1 class="display-4 mb-3">Bem vindo ao Evenement Master</h1>
-                <p class="lead mb-5">Crie e gerencie seus eventos de maneira fácil e eficiente.</p>
-                <a href="#" class="btn btn-primary btn-lg">Criar Evento</a>
-                <a href="/cadastrar" class="btn btn-secondary btn-lg mt-3">Cadastrar</a>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Evenement Master</title>
+    <!-- Certifique-se de incluir o CSS do Bootstrap aqui -->
+</head>
+<body>
+    <div class="container position-relative">
+        <div class="position-absolute top-0 end-0 mt-3 me-3">
+            <a href="/login" class="btn btn-primary btn-lg">Login</a>
+            <a href="/cadastrar" class="btn btn-secondary btn-lg">Cadastrar</a>
+        </div>
+        <div class="row justify-content-center align-items-center vh-100">
+            <div class="col-6">
+                <div class="text-center">
+                    <img src="/frontend/src/img/event-master.png" alt="Logo" class="mb-4">
+                    <h1 class="display-4 mb-3">Bem vindo ao Evenement Master</h1>
+                    <p class="lead mb-5">Crie e gerencie seus eventos de maneira fácil e eficiente.</p>
+                    <a href="#" class="btn btn-primary btn-lg">Criar Evento</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</body>
+</html>
