fazendo alterações visuais e corrigindo 404 do logo

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evenement Master</title>
     <!-- Certifique-se de incluir o CSS do Bootstrap aqui -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="home.component.css">
 </head>
 <body>
     <div class="container position-relative">
@@ -15,10 +17,10 @@
         <div class="row justify-content-center align-items-center vh-100">
             <div class="col-6">
                 <div class="text-center">
-                    <img src="/frontend/src/img/event-master.png" alt="Logo" class="mb-4">
+                    <img src="assets/img/event-master.png" alt="Logo" class="mb-4 logo">
                     <h1 class="display-4 mb-3">Bem vindo ao Evenement Master</h1>
                     <p class="lead mb-5">Crie e gerencie seus eventos de maneira fácil e eficiente.</p>
-                    <a href="#" class="btn btn-primary btn-lg">Criar Evento</a>
+                    <a href="#" class="btn btn-primary btn-lg create-event-button">Criar Evento</a>
                 </div>
             </div>
         </div>
