--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -1,27 +1,62 @@
+/* Estilizar o corpo da página */
+body {
+  background-color: #f8f9fa;
+  font-family: Arial, sans-serif;
+}
+
+/* Estilizar o container */
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-  }
-  
-  h1 {
-    color: #3f51b5;
-    margin-bottom: 20px;
-  }
-  
-  .create-event-button {
-    background-color: #3f51b5;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+}
+
+/* Estilizar o título */
+h1 {
+  color: #3f51b5;
+  margin-bottom: 20px;
+}
+
+/* Estilizar a imagem do logo */
+.logo {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Estilizar os botões */
+.btn-primary, .btn-secondary {
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.btn-primary:hover, .btn-secondary:hover {
+  opacity: 0.9;
+}
+
+/* Adicionar espaçamento entre os botões */
+.position-absolute .btn + .btn {
+  margin-left: 10px;
+}
+
+/* Estilizar o botão de criar evento */
+.create-event-button {
+  background-color: #3f51b5;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.create-event-button:hover {
+  background-color: #303f9f;
+}
