--- a/frontend/src/app/cadastro/cadastro.component.html
+++ b/frontend/src/app/cadastro/cadastro.component.html
@@ -1,32 +1,32 @@
 <div class="container mt-5">
     <h2>Cadastro de Pessoas</h2>
-    <form>
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <label for="nome" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="nome" placeholder="Digite seu nome">
-            </div>
-            <div class="col-md-6">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Digite seu email">
-            </div>
+    <form [formGroup]="cadastroForm" (ngSubmit)="onSubmit()">
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="nome" class="form-label">Nome</label>
+          <input type="text" class="form-control" id="nome" formControlName="nome" placeholder="Digite seu nome">
         </div>
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <label for="cpf" class="form-label">CPF</label>
-                <input type="text" class="form-control" id="cpf" placeholder="Digite seu CPF">
-            </div>
-            <div class="col-md-6">
-                <label for="telefone" class="form-label">Telefone</label>
-                <input type="tel" class="form-control" id="telefone" placeholder="Digite seu telefone">
-            </div>
+        <div class="col-md-6">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" formControlName="email" placeholder="Digite seu email">
         </div>
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <label for="senha" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="senha" placeholder="Digite sua senha">
-            </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="cpf" class="form-label">CPF</label>
+          <input type="text" class="form-control" id="cpf" formControlName="cpf" placeholder="Digite seu CPF">
         </div>
-        <button type="submit" class="btn btn-primary">Cadastrar</button>
+        <div class="col-md-6">
+          <label for="telefone" class="form-label">Telefone</label>
+          <input type="tel" class="form-control" id="telefone" formControlName="telefone" placeholder="Digite seu telefone">
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="senha" class="form-label">Senha</label>
+          <input type="password" class="form-control" id="senha" formControlName="senha" placeholder="Digite sua senha">
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Cadastrar</button>
     </form>
-</div>
+  </div>
